deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod-app
  name: mukesh-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mukesh-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mukesh-app
    spec:
      containers:
      - name: mukesh-app-container
        image: <aws-acc-id>.dkr.ecr.us-east-2.amazonaws.com/myapp-images:mukesh-javaapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
