service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: prod-app
  name: mukesh-app-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
  selector:
    app.kubernetes.io/name: mukesh-app
